# Spreadsheets-plus-plus

./: CMakeLists.txt  README.md
Spreadsheets-plus-plus/: CMakeLists.txt
Spreadsheets-plus-plus/headers/: DataStorage.h  DepsEvents.h  DepsInit.h  DepsRendering.h  Events.h  FileManager.h  Font.h  GUI.h  HandlerContext.h  ILayer.h  Init.h  MenuInteractor.h  Operations.h  PopupInteractor.h  Renderer.h  TableHandlers.h  TableInteractor.h  TableStateMachine.h  TableWidget.h  TaskBarHandlers.h  TaskBarInteractor.h  ToolBarInteractor.h  Widget.h  Window.h
Spreadsheets-plus-plus/src/: Application.cpp  DataStorage.cpp  Font.cpp  GUI.cpp  Init.cpp  Pos.cpp  Renderer.cpp  TableHandlers.cpp  TableStateMachine.cpp  TableWidget.cpp  Widget.cpp  Window.cpp  main.cpp
cmake/: dependencies.cmake
headers/: Application.h  DataStorage.h  DepsEvents.h  DepsInit.h  DepsRendering.h  DialogInteractor.h  DialogLayer.h  Events.h  FileManager.h  Font.h  GUI.h  Handlers.h  ILayer.h  Interactor.h  Layer.h  MenuInteractor.h  MenuLayer.h  NonModalLayer.h  PopupInteractor.h  PopupLayer.h  Pos.h  Requests.h  Responses.h  SpreadsheetSerializer.h  TableHandlers.h  TableInteractor.h  TableLayer.h  TableStateMachine.h  TableWidget.h  TaskBarHandlers.h  TaskBarInteractor.h  TaskBarLayer.h  TextRenderer.h  ToolBarInteractor.h  ToolBarLayer.h  Widget.h
src/: DataStorage.cpp  DialogLayer.cpp  Events.cpp  Font.cpp  GUI.cpp  Handlers.cpp  ILayer.cpp  Layer.cpp  MenuLayer.cpp  PopupLayer.cpp  Renderer.cpp  SpreadsheetSerializer.cpp  TableHandlers.cpp  TableInteractor.cpp  TableLayer.cpp  TableStateMachine.cpp  TableWidget.cpp  TaskBarHandlers.cpp  TaskBarLayer.cpp  TextRenderer.cpp  ToolBarLayer.cpp  Widget.cpp
